2008-04-15  Ben Van Mechelen  <me@benvm.be>

	* TODO.tasks:
	    Removed some completed tasks
